style.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700;900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Cookie&display=swap");
/*...............................................Generales....................................*/
* {
  margin: 0;
  box-sizing: border-box;
  position: relative;
}
body {
  background-color: rgb(236, 235, 235);
  font-family: montserrat;
}

button {
  border: none;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  cursor: pointer;
}

h2 {
  font-size: 20px;
}
h3 {
  font-size: 15px;
}
h5 {
  font-size: 19px;
}
p {
  font-size: 1em;
}

/*........................................Barra de Navegacion.................................*/

.container-header-logo {
  display: flex;
  padding: 40px;
  margin: 60px;
}

.container-header-logo > img {
  width: 25px;
}
.header-nav {
  display: flex;
  justify-content: space-between;
  height: 90px;
  align-items: center;
  width: 100%;
}

.titulo-logo {
  padding-left: 20px;

  font-weight: 400;
}

.carrito {
  display: flex;
  padding: 40px;
  margin: 60px;
}
#modo-diurno,
#modo-nocturno {
  background-color: transparent;
}

.carro,
.fa-shopping-cart {
  padding: 15px;
}
#click-carrito {
  background-color: transparent;
}
/* .......................................Header Background Foto............................. */

.background-foto {
  width: 100%;
  min-height: 300px;
  background-image: url(img/banner.jpg);
  background-size: cover;
  background-position: center;
  display: flex;
  justify-content: center;
  align-items: center;
}
.background-foto::before {
  content: "";
  display: block;
  position: absolute;
  min-height: 300px;
  width: 100%;
  background-color: rgba(0, 0, 0, 0.5);
}
.electronica {
  color: white;
  z-index: 1;
}

/*....................................... Carrito Aside.....................................*/

.cerrar-carrito {
  background-color: transparent;
  position: absolute;
  top: 3%;
  right: 20px;
  border: none;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  font-size: 16px;
  cursor: pointer;
  z-index: 1;
}
.carrito-aside {
  transform: translateX(0);
  height: 100vh;
  width: 35%;
  background-color: white;
  position: fixed;
  top: 0;
  right: 0px;
  transition: 1.5s;
  z-index: 2;
  display: flex;
  overflow: scroll;

  flex-direction: column;
}

.fa-times-circle {
  font-size: 24px;
}

.titulo-menu-carrito {
  padding: 2%;
  font-size: 2em;
  margin: 5% 5% 0;
}
.alertas-contenido-carrito {
  margin-top: 20%;
}
.carrito-contenido {
  display: flex;
  max-height: 90%;
  flex-direction: column;
  margin: 30px;
}
.contenedor-botones-carrito {
  display: flex;
  margin: 40px;
  justify-content: center;
  flex-direction: column;
}

.alertas-contenido-carrito {
  text-align: center;
  font-weight: bold;
  font-size: large;
  margin-bottom: 5%;
}
#comprar-carrito {
  background: rgb(67, 184, 67);
  color: white;
}
.boton-comprar-carrito > a {
  text-decoration: none;
  color: black;
}
#comprar-carrito > a {
  color: white;
}
#vaciar-carrito {
  background: white;
  border: 1px solid red;
  color: red;
}

.overlay {
  width: 100vw;
  height: 100vh;
  background-color: rgba(199, 199, 199, 0.513);
  position: fixed;
  top: 0;
  z-index: 2;
}
.hidden {
  transform: translateX(2500px);
}
.overlay-aumentado {
  z-index: 3;
}
.overflow {
  overflow-y: hidden;
}

/* ...................................Inicio Productos en Carrito......................................... */
.cuerpo-carrito > p {
  margin-bottom: 10%;
}
.subtotal-carrito-aside {
  margin-left: 10%;
}
.productos-agregados-carrito {
  overflow: auto;
  margin-top: 20px;
}

.tarjeta-carrito {
  display: flex;
  margin: 10% 0 10%;
  justify-content: center;
}
.contenedor-especificaciones-miniatura {
  padding: 5px 0;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}
.fa-trash {
  color: red;
}
.eliminar-de-carrito {
  background-color: transparent;
}

.especifiaciones-titulo-miniatura {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  width: 80%;
}
.especificaciones-precio-input-miniatura {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.producto-en-carrito-miniatura {
  width: 30%;
  margin-right: 15px;
}
.producto-en-carrito-miniatura > img {
  width: 100%;
}
.input-cantidad-en-carrito {
  width: 20%;
  text-align: center;
}

/* ...................................Vaciar Carrito......................................... */
.vaciar-carrito-section {
  width: 100%;
  background-color: #fff;
  padding: 40px 30px;
  max-width: 500px;
  position: fixed;
  top: 30%;
  right: 50%;
  z-index: 5;
}
.vaciar-carrito-section > h1 {
  text-align: center;
  font-size: 30px;
  font-weight: 700;
  margin-top: 20px;
}

.botones-vaciar-carrito-footer > button {
  margin-top: 40px;
  margin-left: 20px;
  width: 200px;
  min-height: 50px;
  border-radius: 5px;
}

.botones-vaciar-carrito-footer {
  padding: 40px 10px 30px;
  margin-top: 40px;
  display: flex;
  justify-content: center;
}

.boton-vaciar-carrito-confirmacion {
  background-color: red;
  color: white;
}
/* ...................................Checkout Carrito....................................... */

.checkout {
  background-color: white;
  max-height: 100%;
  min-width: 800px;
  overflow-y: scroll;
  padding: 20px;
  position: fixed;
  right: 25%;
  top: 10%;
  transition: 2s;
  transform: translateY(0);
  z-index: 3;
}

.contenedor-flex {
  display: flex;
  flex-direction: row;
}
.resumen-checkout {
  min-width: 300px;
  background-color: #f5f5f5;
  border-radius: 5px;
  padding: 20px;
  margin-top: 50px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.formulario-checkout {
  width: 70%;
}
.ocultar-checkout {
  transform: translateY(-2000px);
}

.titulo-checkout > h1 {
  margin: 50px;
  margin-left: 30px;
}
/* ... */

